# test

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
mypkg/: a.py  main.py
mypkg/stuff/: b.py
scripts/: lint.sh
tests/: test_a.py  test_main.py
tests/stuff/: test_b.py
