[project]
name = "python-template"
version = "0.0.0"
description = "A template for Python projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
lint = [
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]
bump = [
    {include-group = "test"},
    "commitizen>=3.30.1",
    "genbadge[coverage,tests]>=1.1.1",
]
dev = [{include-group = "lint"}, {include-group = "test"}]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == \"__main__\":",
]

[tool.coverage.run]
branch = true

[tool.mypy]
mypy_path = ["mypkg", "tests"]
files = ["mypkg", "tests"]
strict = "true"

[tool.pytest.ini_options]
addopts = "--cov=mypkg --cov-report=term-missing"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Ignore absence of trailing commas, causes conflicts with formatter
    "D",        # Ignore docstring rules
    "ISC001",   # Ignore implicit string concatenation, causes conflicts with formatter
    "T20"       # Ignore print rules
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Ignore asserts in tests
"tests/*" = ["S101"]

[tool.uv]
default-groups = [] # Only install project dependencies by default